First adaptation to TweetWallFX 2.0-SNAPSHOT
Signed-off-by: Patrick Reinhart <patrick@reini.net>